testdata/Call.##/Call.##.3.0.check
// exitCode: 1
-- [E050] Type Error: target/testdata/Call.##.scala:6:6 ------------------------
6 |  any.##()
  |  ^^^^^^
  |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

-- [E050] Type Error: target/testdata/Call.##.scala:9:6 ------------------------
9 |  ref.##()
  |  ^^^^^^
  |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

2 errors found
